fixed layout issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,9 +8,27 @@
 html {
   font-family: Rubik, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 
 body {
   width: 100%;
+}
+
+@keyframes animateDown {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(5px);
+  }
+
+  60% {
+    transform: translateY(3px);
+  }
 }
